--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -1,5 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
+    <None Include="Data\SeedData\**" CopyToPublishDirectory="PreserveNewest"/>
     <ProjectReference Include="..\Core\Core.csproj"/>
   </ItemGroup>
   <ItemGroup>
@@ -11,6 +12,7 @@
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.8.0"/>
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0"/>
     <PackageReference Include="Stripe.net" Version="39.30.0"/>
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.1"/>
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
